--- a/site_interface/women/templates/women/index.html
+++ b/site_interface/women/templates/women/index.html
@@ -4,7 +4,13 @@
     <title>{{ title }}</title>
 </head>
 <body>
-    <p> {{ menu|join:' | ' }}</p>
+<ul>
+    <li><a href="{% url 'home' %}">{{ title|capfirst }}</a></li>
+    {% for m in menu %}
+    {% if not forloop.last %}<li>{% else %}<li class="last">{% endif %}
+    <a href="{% url m.url_name %}">{{ m.title }}</a></li>
+    {% endfor %}
+</ul>
     <h1>{{ title|capfirst }}</h1>
     <ul>
         {% for post in posts %}
@@ -12,6 +18,8 @@
         <li>
             <h2>{{ post.title }}</h2>
             <p>{{ post.content }}</p>
+<!--            <p><a href="post/{{ post.id }}">Читать пост</a> </p>-->
+            <p><a href="{% url 'post' post.id %}">Читать пост</a> </p>
             {% if not forloop.last %}
             <hr>
             {% endif %}
