--- a/site_interface/women/templates/women/about.html
+++ b/site_interface/women/templates/women/about.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<head>
-    <meta charset="UTF-8">
-    <title>{{ title }}</title>
-</head>
-<body>
-    <p>{{ menu }}</p>
-    <h1>{{ title|capfirst }}</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+<h1>{{ title|capfirst }}</h1>
+{% endblock %}
