--- a/site_interface/women/templates/women/index.html
+++ b/site_interface/women/templates/women/index.html
@@ -1,31 +1,19 @@
-<!DOCTYPE html>
-<head>
-    <meta charset="UTF-8">
-    <title>{{ title }}</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block content %}
+<h1>{{ title|capfirst }}</h1>
+{% include 'women/includes/nav.html' only with text='Какой-то текст' %}
 <ul>
-    <li><a href="{% url 'home' %}">{{ title|capfirst }}</a></li>
-    {% for m in menu %}
-    {% if not forloop.last %}<li>{% else %}<li class="last">{% endif %}
-    <a href="{% url m.url_name %}">{{ m.title }}</a></li>
+    {% for post in posts %}
+    {% if post.is_published%}
+    <li>
+        <h2>{{ post.title }}</h2>
+        <p>{{ post.content }}</p>
+        <p><a href="{% url 'post' post.id %}">Читать пост</a> </p>
+        {% if not forloop.last %}<hr>{% endif %}
+    </li>
+    {% endif %}
     {% endfor %}
 </ul>
-    <h1>{{ title|capfirst }}</h1>
-    <ul>
-        {% for post in posts %}
-        {% if post.is_published%}
-        <li>
-            <h2>{{ post.title }}</h2>
-            <p>{{ post.content }}</p>
-<!--            <p><a href="post/{{ post.id }}">Читать пост</a> </p>-->
-            <p><a href="{% url 'post' post.id %}">Читать пост</a> </p>
-            {% if not forloop.last %}
-            <hr>
-            {% endif %}
-        </li>
-        {% endif %}
-        {% endfor %}
-    </ul>
-</body>
-</html>
+{% include 'women/includes/nav.html' %}
+{% endblock %}
+
